#967 Fix table button spacing and styling (#968)

--- a/canvas_modules/common-canvas/src/common-properties/components/field-picker/field-picker.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/field-picker/field-picker.scss
@@ -18,10 +18,6 @@
 	height: 100%;
 }
 
-.properties-wf-content .properties-fp-table .properties-ft-container-absolute {
-	height: 450px;
-}
-
 .properties-fp-data {
 	height: 100%;
 	display: flex;
@@ -29,22 +25,22 @@
 }
 
 .properties-fp-field, .properties-fp-data {
-	padding-left: 10px;
+	padding-left: $spacing-05;
 	display: flex;
 	align-items: center;
 }
 
 .properties-fp-schema {
-	padding-left: 12px;
+	padding-left: $spacing-05;
 }
 
 .properties-fp-field-type-icon, .properties-fp-data-type-icon {
-	width: 16px;
-	height: 16px;
-	margin-right: 5px;
+	display: flex;
+	align-items: center;
+	margin-right: $spacing-03;
 	> svg {
-		width: 16px;
-		height: 16px;
+		width: $spacing-05;
+		height: $spacing-05;
 	}
 }
 
@@ -54,23 +50,23 @@
 
 	.properties-fp-filter-list-title.properties-fp-filter-list-li {
 		width: auto;
-		margin-left: 10px;
+		margin-left: $spacing-05;
 	}
 
 	.properties-fp-filter-list-li {
 		float: left;
-		padding: 2px;
+		padding: $spacing-01;
 
 		button {
-			min-height: 15px;
+			min-height: $spacing-05;
 			padding: 0;
 			border: 0;
 		}
 
 		svg {
-			height: 16px;
-			width: 16px;
-			margin: 2px;
+			height: $spacing-05;
+			width: $spacing-05;
+			margin: $spacing-01;
 
 			&[disabled] {
 				fill: $disabled-02;
@@ -81,6 +77,7 @@
 
 .properties-fp-table {
 	width: 100%;
+	height: 100%;
 
 	.properties-fp-top-row {
 		width: 50%;
@@ -99,24 +96,24 @@
 .properties-modal {
 	.properties-fp-top-row {
 		width: 100%;
-		margin-bottom: 6px;
+		margin-bottom: $spacing-03;
 		display: flex;
 		justify-content: space-between;
 
 		.properties-fp-button-label {
 			position: relative;
-			top: 5px;
+			top: $spacing-03;
 		}
 
 		// This back button is used in common-properties modal format
 		.properties-fp-back-button {
-			height: 32px;
-			width: 32px;
+			height: $spacing-07;
+			width: $spacing-07;
 			padding: 0;
-			margin-right: 8px;
+			margin-right: $spacing-03;
 
 			> svg {
-				left: 5px;
+				left: $spacing-03;
 			}
 		}
 	}
