--- a/canvas_modules/common-canvas/src/common-properties/components/virtualized-table/virtualized-table.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/virtualized-table/virtualized-table.scss
@@ -14,12 +14,10 @@
  * limitations under the License.
  */
 
-$properties-vt-checkbox-width: 45px;
 
 .properties-vt {
 	width: 100%;
 	height: 100%;
-	background: $ui-02;
 
 	.properties-autosized-vt {
 		// Table rows container
@@ -41,13 +39,22 @@ $properties-vt-checkbox-width: 45px;
 		height: $spacing-07;
 		display: flex;
 		align-items: center;
-		flex: 0 1 $properties-vt-checkbox-width;
 		margin-left: $spacing-05;
+		margin-right: $spacing-02;
+	}
+
+	div[data-role="properties-header-row"] {
+		background-color: $ui-03;
+	}
+
+	div[data-role="properties-data-row"] {
+		background-color: $ui-02;
 	}
 
 	.properties-autosized-vt-header {
 		// Override text-transform: uppercase from .ReactVirtualized__Table__headerRow
 		text-transform: none;
+		margin-left: 0;
 		.properties-vt-column .bx--checkbox-wrapper {
 			margin-top: 0;
 			margin-bottom: 0;
@@ -96,7 +103,7 @@ $properties-vt-checkbox-width: 45px;
 	.properties-vt-row-checkbox {
 		height: $spacing-07;
 		margin-left: $spacing-05;
-		flex: 0 1 $properties-vt-checkbox-width;
+		margin-right: $spacing-02;
 	}
 
 	.properties-vt-double-click:first-of-type {
@@ -144,6 +151,7 @@ $properties-vt-checkbox-width: 45px;
 
 		.ReactVirtualized__Table__rowColumn {
 			margin-right: 0; // Align cell text with header label
+			margin-left: 0;
 		}
 
 		// Override padding for sortable columns to show space between column label and sort icon
@@ -173,7 +181,7 @@ $properties-vt-checkbox-width: 45px;
 	.properties-vt-single-selection {
 		// Table header
 		div[data-role="properties-header-row"] {
-			padding-left: 9px;
+			padding-left: 3px;
 		}
 
 		// Table rows
@@ -200,7 +208,9 @@ $properties-vt-checkbox-width: 45px;
 	}
 
 	.properties-light-disabled {
-		background-color: $ui-01;
+		div[data-role="properties-data-row"] {
+			background-color: $ui-01;
+		}
 		.bx--select--inline .bx--select-input[disabled] {
 			background-color: $ui-background;
 		}
