--- a/canvas_modules/common-canvas/src/common-properties/controls/abstract-table.scss
+++ b/canvas_modules/common-canvas/src/common-properties/controls/abstract-table.scss
@@ -35,9 +35,13 @@
 		color: $ui-01;
 	}
 
+	.properties-ft-table-header {
+		display: none;
+	}
+
 	// align summaryTable row
 	.properties-vt-row-checkbox {
-		margin-left: 0;
+		width: 1.25rem;
 	}
 
 	.properties-vt-row-class {
